# figma-airtable

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  ROADMAP.md  SPONSOR_REPORT_PLAN.md  airtable_client.py  config.template.yaml  figma_client.py  fly.toml  main.py  package.json  pipeline.py  poller.py  pyproject.toml  requirements.txt  settings.py  templates.yaml  templates.yaml.example  webhook_server.py
src/airtable_to_figma/: __init__.py  airtable_client.py  background_remover.py  figma_client.py  image_renderer.py  pipeline.py  poller.py  settings.py  template.py
