[project]
name = "airtable-to-figma"
version = "0.1.0"
description = "Automated design generation from Airtable data using Figma templates"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "colorlog>=6.8.2",
]

[project.scripts]
airtable-to-figma = "airtable_to_figma.poller:run_poller"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["airtable_to_figma"]
