[project]
name = "airtable-to-figma"
version = "0.1.0"
description = "Automated design generation from Airtable data using Figma templates"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "colorlog>=6.8.2",
    "rembg>=2.0.0",
    "onnxruntime>=1.16.0",
    "pypdf>=4.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
airtable-to-figma = "airtable_to_figma.poller:run_poller"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airtable_to_figma"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["airtable_to_figma"]
